--- a/CarePointe/communication.storyboard
+++ b/CarePointe/communication.storyboard
@@ -50,10 +50,10 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cex-t4-ugS" customClass="RoundedButton" customModule="CarePointe" customModuleProvider="target">
-                                        <rect key="frame" x="317" y="16" width="50" height="50"/>
+                                        <rect key="frame" x="335" y="26" width="30" height="30"/>
                                         <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="bta-qr-ImM"/>
+                                            <constraint firstAttribute="height" constant="30" id="bta-qr-ImM"/>
                                             <constraint firstAttribute="width" secondItem="cex-t4-ugS" secondAttribute="height" multiplier="1:1" id="pnC-tW-jvm"/>
                                         </constraints>
                                         <state key="normal" image="letterC.png"/>
@@ -64,12 +64,12 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.25098040700000002" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="cex-t4-ugS" secondAttribute="trailing" constant="8" id="L9v-Uu-keh"/>
+                                    <constraint firstAttribute="trailing" secondItem="cex-t4-ugS" secondAttribute="trailing" constant="10" id="L9v-Uu-keh"/>
+                                    <constraint firstItem="cex-t4-ugS" firstAttribute="centerY" secondItem="azb-eS-hdL" secondAttribute="centerY" id="N2h-fM-Qva"/>
                                     <constraint firstAttribute="height" constant="70" id="ZTQ-UC-IKN"/>
                                     <constraint firstItem="azb-eS-hdL" firstAttribute="leading" secondItem="F6q-4E-gEB" secondAttribute="leading" constant="6" id="kPa-Eu-Psq"/>
                                     <constraint firstItem="tAT-jZ-jfK" firstAttribute="leading" secondItem="F6q-4E-gEB" secondAttribute="leading" constant="60" id="kdj-0t-aQB"/>
                                     <constraint firstItem="azb-eS-hdL" firstAttribute="top" secondItem="F6q-4E-gEB" secondAttribute="top" constant="26" id="l9U-yP-tfg"/>
-                                    <constraint firstItem="cex-t4-ugS" firstAttribute="top" secondItem="F6q-4E-gEB" secondAttribute="top" constant="16" id="nJB-tI-ldS"/>
                                     <constraint firstItem="tAT-jZ-jfK" firstAttribute="centerY" secondItem="F6q-4E-gEB" secondAttribute="centerY" id="t1w-cs-ZjB"/>
                                 </constraints>
                             </view>
@@ -204,41 +204,35 @@
                                     <action selector="videoConferenceButtonTapped:" destination="ekK-vf-Wgs" eventType="touchUpInside" id="pkz-4E-pGq"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="49" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MOD-oL-2YY">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MOD-oL-2YY">
                                 <rect key="frame" x="16" y="413" width="343" height="186"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellUser3" rowHeight="49" id="jBj-tY-XCS" customClass="AddUsers3Cell" customModule="CarePointe" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="343" height="49"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellUser3" rowHeight="60" id="jBj-tY-XCS" customClass="AddUsers3Cell" customModule="CarePointe" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="343" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jBj-tY-XCS" id="TuU-ei-cMx">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="49"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accent Care" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oed-d6-Rag">
-                                                    <rect key="frame" x="8" y="0.0" width="287" height="23"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="287" id="Vl1-0r-FN0"/>
-                                                    </constraints>
+                                                    <rect key="frame" x="8" y="5" width="290" height="23"/>
                                                     <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Position: Vendor Network: Universal Home Health Network" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8A-AX-VSQ">
-                                                    <rect key="frame" x="8" y="23" width="287" height="21"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="287" id="n5o-ir-N8x"/>
-                                                    </constraints>
+                                                    <rect key="frame" x="8" y="33" width="290" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BIw-sy-OyS" customClass="RoundedButton" customModule="CarePointe" customModuleProvider="target">
-                                                    <rect key="frame" x="295" y="0.0" width="48" height="48"/>
+                                                    <rect key="frame" x="298" y="3" width="45" height="45"/>
                                                     <color key="backgroundColor" red="0.2651024461" green="0.59462851289999996" blue="0.77094310519999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="48" id="JWa-rU-lxa"/>
-                                                        <constraint firstAttribute="width" constant="48" id="YZm-kr-LOj"/>
+                                                        <constraint firstAttribute="height" constant="45" id="JWa-rU-lxa"/>
+                                                        <constraint firstAttribute="width" constant="45" id="YZm-kr-LOj"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
                                                     <inset key="imageEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
@@ -254,14 +248,14 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="BIw-sy-OyS" firstAttribute="leading" secondItem="oed-d6-Rag" secondAttribute="trailing" id="5BS-2l-ZgQ"/>
-                                                <constraint firstItem="R8A-AX-VSQ" firstAttribute="top" secondItem="oed-d6-Rag" secondAttribute="bottom" id="5Y6-j8-LJZ"/>
+                                                <constraint firstItem="R8A-AX-VSQ" firstAttribute="top" secondItem="oed-d6-Rag" secondAttribute="bottom" constant="5" id="5Y6-j8-LJZ"/>
                                                 <constraint firstItem="R8A-AX-VSQ" firstAttribute="leading" secondItem="TuU-ei-cMx" secondAttribute="leading" constant="8" id="9yy-eU-A9m"/>
                                                 <constraint firstItem="BIw-sy-OyS" firstAttribute="leading" secondItem="R8A-AX-VSQ" secondAttribute="trailing" id="Gsd-vJ-CUq"/>
-                                                <constraint firstItem="oed-d6-Rag" firstAttribute="top" secondItem="TuU-ei-cMx" secondAttribute="top" id="UVo-dH-cg0"/>
+                                                <constraint firstItem="oed-d6-Rag" firstAttribute="top" secondItem="TuU-ei-cMx" secondAttribute="top" constant="5" id="UVo-dH-cg0"/>
                                                 <constraint firstAttribute="trailing" secondItem="BIw-sy-OyS" secondAttribute="trailing" id="XJ8-wk-3H6"/>
-                                                <constraint firstItem="BIw-sy-OyS" firstAttribute="top" secondItem="TuU-ei-cMx" secondAttribute="top" id="oL7-Mv-N49"/>
+                                                <constraint firstItem="BIw-sy-OyS" firstAttribute="top" secondItem="TuU-ei-cMx" secondAttribute="top" constant="3" id="oL7-Mv-N49"/>
                                                 <constraint firstItem="oed-d6-Rag" firstAttribute="leading" secondItem="TuU-ei-cMx" secondAttribute="leading" constant="8" id="qjn-Ow-44c"/>
-                                                <constraint firstAttribute="bottom" secondItem="R8A-AX-VSQ" secondAttribute="bottom" constant="4" id="rDu-r5-lSd"/>
+                                                <constraint firstAttribute="bottom" secondItem="R8A-AX-VSQ" secondAttribute="bottom" constant="6" id="rDu-r5-lSd"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
